# profile.mobile.apps.native.call-setting

./: .cproject  .gitignore  .project  CMakeLists.txt  call-setting.manifest  intl-dial.manifest  org.tizen.call-setting-1.0.0-arm.tpk  org.tizen.call-setting-1.0.0-arm_debug.tpk  org.tizen.call-setting-1.0.0-i386.tpk  org.tizen.call-setting-1.0.0-i386_debug.tpk  org.tizen.call-setting.xml  project_def.prop  setting-call-efl.xml  tizen-manifest.xml  ug.setting-call-efl.include
CMake/: CMakeLists.txt
CMake/po/: CMakeLists.txt
SDK-Project/: .cproject  .gitignore  .project  project_def.prop  tizen-manifest.xml
SDK-Project/call-setting/: .cproject  .project  project_def.prop  tizen-manifest.xml
SDK-Project/common/edc/: icon_button_style.edc  theme.edc
SDK-Project/common/inc/: Common.h
SDK-Project/edc/: PhoneEditItemLayout.edc  RejectMessageEditorLayout.edc
SDK-Project/inc/App/: AppConfig.h  AppCore.h  Application.h  BaseApplication.h  SystemEventListener.h  SystemEventManager.h  SystemEventProvider.h
SDK-Project/inc/Controler/: Controler.h
SDK-Project/inc/Controller/: AnswerViewController.h  BaseController.h  CallFwController.h  ContactTelNumberPicker.h  MainViewController.h  MoreViewController.h  RejectMsgEditorController.h  RejectMsgListController.h  TelNumberPicker.h  Utils.h  ViewController.h
SDK-Project/inc/Utils/: Callback.h  Common.h  Delegate.h  Delegation.h  Logger.h  NonCopyable.h  Path.h
SDK-Project/inc/View/: AnswerView.h  CallFwView.h  GenlistView.h  MainView.h  MoreView.h  PhoneEditListItem.h  RejectMsgEditView.h  RejectMsgListView.h
SDK-Project/res/edje/: call-setting-theme.edc
SDK-Project/res/po/: ar.po  az.po  ca.po  cs.po  da.po  de.po  en.po  en_US.po  es_ES.po  es_US.po  et.po  fr_CA.po  ga.po  hi.po  hu.po  is.po  it_IT.po  kk.po  ko_KR.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  ro.po  sk.po  sv.po  uk.po  uk_UA.po  zh_CN.po  zh_HK.po  zh_TW.po
SDK-Project/src/: main.cpp
SDK-Project/src/App/: AppCore.cpp  Application.cpp  BaseApplication.cpp  SystemEventManager.cpp  SystemEventProvider.cpp
SDK-Project/src/Controller/: AnswerViewController.cpp  BaseController.cpp  CallFwController.cpp  ContactTelNumberPicker.cpp  MainViewController.cpp  MoreViewController.cpp  RejectMsgEditorController.cpp  RejectMsgListController.cpp  RejectMsgUtils.cpp  TelNumberPicker.cpp  Utils.cpp  ViewController.cpp
SDK-Project/src/Utils/: Path.cpp
SDK-Project/src/View/: AnswerView.cpp  CallFwView.cpp  GenlistView.cpp  MainView.cpp  MoreView.cpp  PhoneEditListItem.cpp  RejectMsgEditView.cpp  RejectMsgListView.cpp
common/inc/appfw/: AppTypes.h  BaseApplication.h  Path.h  SystemEventManager.h
common/inc/gui/: BaseView.h  Button.h  CategoryItem.h  Checkbox.h  CheckboxListItem.h  DoubleTextListItem.h  Editfield.h  Genlist.h  GenlistItem.h  GuiTypes.h  Layout.h  (+12 more)
edc/: RejectMessageEditorLayout.edc
inc/: cst-answering.h  cst-call-setting.h  cst-common-string.h  cst-common.h  cst-debug.h  cst-delete-list.h  cst-fdn-setting.h  cst-more-call-setting.h  cst-reject-msg.h  cst-tapi-request.h  cst-util.h  cst-widget.h
inc/App/: AppConfig.h  Application.h
inc/Controller/: AnswerViewController.h  CallFwController.h  ContactTelNumberPicker.h  MainViewController.h  MoreViewController.h  RejectMsgEditorController.h  RejectMsgListController.h
inc/View/: AnswerView.h  GenlistView.h  MainView.h  MoreView.h  PhoneEditListItem.h  RejectMsgEditView.h
include/: cst-barring.h  cst-call-forwarding-change-ime-docomo.h  cst-call-forwarding-charged-docomo.h  cst-call-forwarding-guidance-settings-docomo.h  cst-call-forwarding-ime-docomo.h  cst-call-forwarding-service-docomo.h  cst-call-forwarding-settings-docomo.h  cst-call-noti-roaming-docomo.h  cst-call-notification-docomo.h  cst-call-waiting-service-docomo.h  cst-caller-id-noti-docomo.h  cst-caller-id-req-docomo.h  cst-common-docomo.h  cst-common-string.h  cst-common.h  cst-courier-service-docomo.h  cst-debug.h  cst-delete-list.h  cst-editfield.h  cst-eng-guidance-docomo.h  cst-eng-guidance-settings-docomo.h  cst-fdn-contact.h  cst-fdn-list.h  cst-forwarding-ime.h  cst-forwarding.h  cst-intrl-dial-assist-docomo.h  cst-intrl-dial-country-code-docomo.h  cst-intrl-dial-prefix-docomo.h  cst-main-docomo.h  cst-network-service-docomo.h  cst-nuisance-call-block-specific-id-ime-docomo.h  cst-nuisance-call-blocking-docomo.h  cst-overseas-network-service-docomo.h  cst-public-mode-settings-docomo.h  cst-reject-msg-ime.h  cst-reject-msg.h  cst-remote-control-settings-docomo.h  cst-restrict-incoming-activate-svc-roaming-docomo.h  cst-restrict-incoming-ime-docomo.h  cst-restrict-incoming-roaming-docomo.h  (+13 more)
intl-dial/: CMakeLists.txt  intl-dial.c  intl-dial.h  intl-dial.pc.in  intl-dial.sql
packaging/: call-setting.spec  org.tizen.call-setting.spec
po/: CMakeLists.txt  en_US.po  es_ES.po  es_US.po  fr_CA.po  hr.po  mk.po  nb.po  pt_BR.po  sl.po  tr_TR.po  uk.po  uz.po
res/edje/: call-setting-theme.edc  call-setting.edc
res/po/: CMakeLists.txt  ar.po  az.po  bg.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  eu.po  fi.po  fr.po  gl.po  hr.po  hy.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  pl.po  pt_PT.po  ru_RU.po  sk.po  sl.po  sr.po  sv.po  tr_TR.po  uz.po  zh_CN.po  zh_HK.po  zh_TW.po
resource/: call-setting-docomo.edc  call-setting.edc  ug_effect.edc
resource/edc/: call-setting.edc  color-classes.edc
src/: cst-answering.c  cst-barring.c  cst-call-setting.c  cst-common-string.c  cst-delete-list.c  cst-editfield.c  cst-fdn-contact.c  cst-fdn-list.c  cst-fdn-setting.c  cst-forwarding-ime.c  cst-forwarding.c  cst-main.c  cst-more-call-setting.c  cst-reject-msg-ime.c  cst-reject-msg.c  cst-tapi-request.c  cst-util.c  cst-widget.c  main.cpp
src/App/: Application.cpp
src/Controller/: AnswerViewController.cpp  CallFwController.cpp  MainViewController.cpp  MoreViewController.cpp  RejectMsgEditorController.cpp  RejectMsgListController.cpp  Utils.cpp
src/View/: AnswerView.cpp  MainView.cpp  MoreView.cpp  PhoneEditListItem.cpp  RejectMsgEditView.cpp
theme/: call-setting-theme.edc  genlist_macro.edc
(+208 files in other folders)
